# printik

./: .gitignore  Cargo.toml  build.rs  pdfium.def  pdfium.lib
.cargo/: config.toml
src/: bindings_pdfium.rs  cups_bindings.rs  main.rs  pdfwrap.rs  print_job.rs  printer.rs  printer_control.rs  printer_wrapper.rs  ui.rs  watcher.rs
src/printer/: printer_macos.rs  printer_windows.rs
