[package]
name = "photo_qt"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
eframe = "0.27"
egui_extras = { version = "0.27", features = ["all_loaders"] }
egui = "0.27"
image = { version = "0.25", features = ["jpeg", "png"] }
notify = "8.0.0"
rfd = "0.14"
pdfium-render = "0.8.31"
dashmap = "5.5.3"
libc = "0.2"
lopdf = "0.32.0"

[build-dependencies]
bindgen = "0.71.0"
