[package]
name = "photo_qt"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.release]
lto = true


[dependencies]
eframe = {version = "0.31.1", default-features = false, features = ["glow", "default_fonts"]}
egui_extras = { version = "0.31.1", features = ["image", "file"] }
egui = { version = "0.31.1", default-features = false }
image = { version = "0.25", features = ["jpeg", "png"] }
notify = "8.0.0"
rfd = "0.14"
pdfium-render = "0.8.31"
dashmap = "5.5.3"
libc = "0.2"
lopdf = "0.32.0"
parking_lot = "0.12"
static_assertions = "1.1"
winprint = { version = "0.2.0", features = ["pdfium"] }

[build-dependencies]
bindgen = "0.71.0"
windows_exe_info = "0.5.1"
